# Deep-learning-cc

./: .gitignore  README.md
C_extension/: setup.py
custom_C_plus/: custom_c.py  test.cpp
example-app/: example-app.cpp
mnist/: mnist.cpp
pytorch_c/C_extension/: lltm.cpp
pytorch_c/custom_C_plus/: CMakeLists.txt
pytorch_c/example-app/: command  pytorchWithC_app.cpp  pytorch_C_frontend.cpp
pytorch_c/mnist/: CMakeLists.txt  mnist2.cpp
tensorflow_c/: command  hello_tf.c
tensorflow_c/example/: BUILD  example_tf.cc
